fixed navbar styling on small screens

--- a/sass/activatoradmin.scss
+++ b/sass/activatoradmin.scss
@@ -222,9 +222,6 @@ body {
   .list-unstyled li input {
     margin-right: 100%;
   }
-  .logout {
-    margin-left: 30px;
-  }
 }
 
 @media screen and (max-width: $small-width) {
@@ -234,5 +231,8 @@ body {
         min-width: 100%;
       }
     }
+  }
+  .navbar {
+    min-height: 75px;
   }
 }
